# rust-chat

./: Cargo.toml  Dioxus.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/assets/: input-box.css  main.css  new-chat.css  sidebar.css
crates/core/src/: chat_service.rs  globals.rs  image_utils.rs  main.rs  messages.rs  models.rs  openai.rs  shared_state.rs
crates/core/src/chat_completions/: comp_chunks_collector.rs  comp_post.rs  comp_stream.rs  comp_stream_utils.rs  mod.rs
crates/core/src/components/: ChatBody.rs  InputBox.rs  ModelSelector.rs  NewChat.rs  SendButton.rs  SideBar.rs  mod.rs
