[workspace]
resolver = "2"
members = [
    "crates/core"
]
default-members = ["crates/core"]

[workspace.dependencies]
core = {path = "crates/core"}
tokio = {version = "1.44.2", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.140"}
reqwest = { version = "0.12.9", features = ["blocking", "stream", "json"] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
